# swiftlog

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: add_library_distribution_targets.cmake  generate_umbrella_header.cmake  mark_non_standard_sources.cmake  target_compile_options_strict.cmake
lib/: CMakeLists.txt
lib/include/mongoose/: cbridge.hpp  mongoose.hpp  pch.hpp
lib/include/mongoose/__config/: config.hpp
lib/include/mongoose/__module/: dialog.hpp  library.hpp
lib/include/swiftguard/: pch.hpp  swiftguard.hpp
lib/include/swiftguard/__config/: export.hpp
lib/include/swiftguard/__modules/: library.hpp
lib/src/: library.cpp
lib/src/platform/compiler/: msvc_cbridge.cpp
lib/src/platform/darwin/: dialog.mm
lib/src/platform/win32/: dialog.cpp
lib/src/shared/: library.cpp
